--- a/fifth_semester/IT255/IT255-DZ01-3860-JovanVujovic/index.html
+++ b/fifth_semester/IT255/IT255-DZ01-3860-JovanVujovic/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="main.css">
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>IT255-DZ01</title>
 </head>
 <body>
+<header id="header">
+    <h1>IT255-DZ01</h1>
+    <h2>Ovo je header sekcija HTML dokumenta</h2>
+</header>
+<nav>
+    <ul>
+        <li><a href="#header">Header</a></li>
+        <li><a href="#footer">Footer</a></li>
+        <li style="float:right"><a class="active" href="#aside">Aside</a></li>
+    </ul>
+</nav>
+<div>
+    <section>
+        <h3>
+            Heading u section tag-u
+        </h3>
+        <article>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum odio magna, id volutpat nunc
+            vulputate pellentesque. Mauris ipsum dui, placerat eget ipsum ac, pulvinar malesuada lorem. Etiam pharetra
+            consequat tortor sit amet convallis. Suspendisse massa mi, efficitur sit amet elementum sed, luctus vel
+            nunc. Aliquam tincidunt laoreet odio, sed ornare elit pulvinar in. Etiam lobortis justo eget quam eleifend,
+            vitae fermentum elit lacinia. Suspendisse at dui quam. Pellentesque rhoncus erat eu mattis condimentum.
+            Proin pulvinar felis vitae leo ullamcorper, at hendrerit ante faucibus. Duis semper est felis, blandit
+            ornare ante ultricies eu. Ut rutrum orci a est vehicula, eget eleifend turpis vulputate. Maecenas eget
+            fermentum eros. Aenean ut felis aliquam, interdum eros sit amet, molestie magna. Vestibulum pretium enim et
+            mattis eleifend.
+        </article>
+    </section>
+    <aside>
+        <p id ="aside">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum odio magna, id volutpat nunc
+            vulputate pellentesque. Mauris ipsum dui, placerat eget ipsum ac, pulvinar malesuada lorem. Etiam pharetra
+            consequat tortor sit amet convallis. Suspendisse massa mi, efficitur sit amet elementum sed, luctus vel
+            nunc. Aliquam tincidunt laoreet odio, sed ornare elit pulvinar in. Etiam lobortis justo eget quam eleifend,
+            vitae fermentum elit lacinia. Suspendisse at dui quam.
+        </p>
+    </aside>
+</div>
+
+<footer id="footer">
+    <p>Author : Jovan Vujovic<br>
+        <a href="mailto:jvujovic1998@gmail.com">jvujovic1998@gmail.com</a></p>
+</footer>
 
 </body>
 </html>
