--- a/fifth_semester/IT255/homeworks/hw03/IT255-DZ03-3860-JovanVujovic/zadatak2/index.html
+++ b/fifth_semester/IT255/homeworks/hw03/IT255-DZ03-3860-JovanVujovic/zadatak2/index.html
@@ -22,10 +22,10 @@
         </div>
 
         <div class="form-group">
+            <button type="button" class="btn btn-primary" id="plus" onclick="sum()">+</button>
             <button type="button" class="btn btn-primary" id="puta" onclick="times()">*</button>
             <button type="button" class="btn btn-primary" id="podeljeno" onclick="divide()">/</button>
-            <button type="button" class="btn btn-primary" id="plus" onclick="plus()">+</button>
-            <button type="button" class="btn btn-primary" id="minus" onclick="minus()">-</button>
+            <button type="button" class="btn btn-primary" id="minus" onclick="subtract()">-</button>
         </div>
         <div class="form-group">
             <label for="result">Result:</label>
